fix #1437; change tooltip z-index; adjust reposnosve table; (#1442)

--- a/modules/admin/src/resources/scss/variables/_zindex.scss
+++ b/modules/admin/src/resources/scss/variables/_zindex.scss
@@ -10,11 +10,11 @@ $zindex-elements:
         navbar,
         dropdown,
         debug,
-        tooltip,
         popover,
         loadingbar,
         toast,
         overlay,
         modal,
-        modal-toast
+        modal-toast,
+        tooltip
 ;
